--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -25,6 +25,8 @@
     &--nearest {
       @include onTablet {
         margin-bottom: 0;
+        max-width: 480px;
+        max-height: 600px;
       }
 
       @include onDesktop {
