--- a/src/styles/blocks/exhibitions.scss
+++ b/src/styles/blocks/exhibitions.scss
@@ -42,22 +42,11 @@
     display: none;
 
     @include onTablet {
-      display: block;
-      padding-left: 42px;
-      background-position-x: 170px;
-      background-position-y: 20px;
-    }
-
-    @include onDesktop {
-      padding-left: 66px;
-      background-position-x: 194px;
+      display: flex;
     }
 
     &--mobile {
-      display: block;
-      padding-left: 66px;
-      background-position-x: 190px;
-      background-position-y: 19px;
+      display: flex;
 
       @include onTablet {
         display: none;
