--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -16,6 +16,7 @@
     @include onTablet {
       flex-direction: row;
       gap: 30px;
+      justify-content: space-between;
     }
   }
 
