--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -57,6 +57,7 @@
 
     @include onTablet {
       margin: 0;
+      max-width: unset;
     }
   }
 
@@ -121,7 +122,7 @@
     }
 
     @include onDesktop {
-      display: block;
+      display: inline-block;
     }
   }
 
