--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,6 +6,8 @@
 
   overflow-y: auto;
 
+  z-index: 99;
+
   &__top {
     display: flex;
     justify-content: space-between;
