--- a/src/styles/blocks/nearest.scss
+++ b/src/styles/blocks/nearest.scss
@@ -49,22 +49,11 @@
     display: none;
 
     @include onTablet {
-      display: block;
-      padding-left: 37px;
-      background-position-x: 165px;
-      background-position-y: 19px;
-    }
-
-    @include onDesktop {
-      padding-left: 63px;
-      background-position-x: 193px;
+      display: flex;
     }
 
     &--mobile {
-      display: block;
-      padding-left: 63px;
-      background-position-x: 193px;
-      background-position-y: 19px;
+      display: flex;
 
       @include onTablet {
         display: none;
