--- a/src/styles/blocks/news.scss
+++ b/src/styles/blocks/news.scss
@@ -43,23 +43,12 @@
     display: none;
 
     @include onTablet {
-      display: block;
-      padding-left: 53px;
-      background-position-x: 149px;
-      background-position-y: 19px;
-    }
-
-    @include onDesktop {
-      padding-left: 84px;
-      background-position-x: 178px;
+      display: flex;
     }
 
     &--mobile {
-      display: block;
+      display: flex;
       margin-top: 30px;
-      padding-left: 84px;
-      background-position-x: 178px;
-      background-position-y: 19px;
 
       @include onTablet {
         display: none;
